tests/paczka1/small_fuzzy/67872491.err
Error in line 6: o1PD88oI4S7 A751 60,97
Error in line 1: JRHPtnEy1 S784 99,1
Error in line 4: o1PD88oI4S7 A103 44,9
Error in line 8: JRHPtnEy1 A103 44,0
Error in line 5: HATzsfINEC A751 62,7
